<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#FF9800"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="16dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/description"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="18sp"
        android:textStyle="italic"
        android:typeface="serif"
        android:layout_marginBottom="16dp"/>

    <ImageView
        android:id="@+id/clock"
        android:layout_below="@id/description"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/clock"
        android:paddingLeft="16dp"
        android:paddingStart="16dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/clock"
        android:layout_toRightOf="@id/clock"
        android:layout_marginLeft="16dp"
        android:text="Our working hours"
        android:textColor="#040404"
        android:typeface="sans"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/hours"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:textColor="#343434"
        android:textSize="12sp"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@id/clock"
        android:text="@string/Mon_Fri" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hours"
        android:textColor="#343434"
        android:textSize="12sp"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@id/clock"
        android:text="@string/Saturday"
        android:layout_toEndOf="@id/clock"
        android:layout_marginStart="16dp" />



    <ImageView
        android:id="@+id/phone"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@id/clock"
        android:src="@drawable/phone"
        android:paddingLeft="16dp"
        android:paddingStart="16dp"/>

    <TextView
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/phone"
        android:layout_toRightOf="@id/phone"
        android:text="@string/our_contacts"
        android:textColor="#040404"
        android:typeface="sans"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contact"
        android:layout_toRightOf="@id/phone"
        android:text="@string/phone_number"
        android:textColor="#343434"
        android:textSize="12sp"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/number"
        android:layout_toRightOf="@id/phone"
        android:textColor="#343434"
        android:textSize="12sp"
        android:text="@string/email"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:textColor="#343434"
        android:textSize="12sp"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@id/phone"
        android:text="Visit our website : www.prisocorporation.com"
        android:layout_toEndOf="@id/phone"
        android:layout_marginStart="16dp" />


    <ImageView
        android:id="@+id/location"
        android:layout_below="@id/phone"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/location"
        android:paddingLeft="16dp"
        android:paddingStart="16dp" />

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/location"
        android:layout_toRightOf="@id/location"
        android:text="Our location"
        android:textColor="#040404"
        android:typeface="sans"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/location"
        android:layout_below="@id/title1"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:textColor="#343434"
        android:textSize="12sp"
        android:text="@string/location" />

    <Button
        android:id="@+id/button"
        android:layout_below="@id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ORDER HERE"
        android:background="#FF9800"
        android:textColor="#000000"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:padding="15dp"
        android:layout_marginTop="50dp"/>

</RelativeLayout>